# db_s15

./: .gitignore  README.md  data_generation.bash  data_generation.py  data_generation.sh  test.txt
scraper/: cit  mathgen-623611246.tex  remove_tex.pl  scigenbibfile.bib  scraper.py  tex
scraper/catdvi-0.14/: ChangeLog  GNUmakefile  INSTALL  MD5SUMS  Manifest  NEWS  adobe2h  adobe2h.c  adobe2h.d  build.sh  bytesex.c  bytesex.d  bytesex.h  canvas.c  canvas.d  canvas.h  catdvi.1  catdvi.c  catdvi.d  catdvi.txt  changelog-authors  config.cache  config.mk  config.mk.in  config.status  configure  configure.in  cvsparser.pl  density.c  density.d  density.h  findtfm.h  fixword.c  fixword.d  fixword.h  fntenc.c  fntenc.d  fntenc.h  fontinfo.c  fontinfo.d  (+47 more)
scraper/catdvi-0.14/autom4te.cache/: output.0  requests  traces.0
scraper/catdvi-0.14/enc/: README  amssymba.h  amssymba.tex  amssymbb.h  amssymbb.tex  blackboard.h  blackboard.tex  cork.h  cork.tex  dummy.h  dummy.tex  euex.h  euex.tex  eufrak.h  eufrak.tex  eurosym.h  eurosym.tex  latexsym.h  latexsym.tex  marvo00.h  marvo00.tex  marvo98.h  marvo98.tex  ot1.h  ot1.tex  ot1wofl.h  ot1wofl.tex  texmext.h  texmext.tex  texmital.enc  texmital.h  texmital.tex  texmsym.h  texmsym.tex  textcomp.h  textcomp.tex  textt.h  textt.tex
scraper/catdvi-0.14/test/: box.tex  finnish.tex  ligatures.tex  math.tex  ot1umlauts.tex  private.tex  testfont.tex  texlogo.tex  texmext.tex
scraper/paper/: README  mathgen-1032131645.tex  scigenbibfile.bib  test.tex  test.txt
sql/: configuration  example_queries.sql
sql/dbconfig/: create_tables.sql  drop_tables.sql  todo
sql/pyutil/: sql_populate.py
ui/: analysis.py  configuration
